# larql-to-sparql

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD_OPTIMIZATION_ROADMAP.md  BUILD_PROCESS_ANALYSIS.md  BUILD_TEST_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ENVIRONMENT_AUDIT.md  HARDENING_ROADMAP.md  LARQL_STATIC_ANALYSIS.md  LEGAL_TRANSITION.md  Makefile  NOTICE  README.md  REUSE.md  REUSE.toml  REVIEW_SUMMARY.md  ROADMAP.md  cliff.toml  cog.toml  demo.vlp  deny.toml  history.txt  paraphrase_results.json  paraphrase_sweep_results.json  rust-toolchain.toml  rustfmt.toml  setup.sh
crates/kv-cache-benchmark/: CHANGELOG.md  Cargo.toml  README.md
crates/kv-cache-benchmark/benches/: kv_strategies.rs
crates/kv-cache-benchmark/docs/: accuracy-test-suite.md  kv-cache-benchmark-spec-v3.md
crates/kv-cache-benchmark/examples/: accuracy_suite.rs  decode_bench.rs  ffn_coverage.rs  multi_turn_demo.rs  real_model_bench.rs  shader_bench.rs
crates/kv-cache-benchmark/results/: real_model.json
crates/kv-cache-benchmark/src/: accuracy.rs  benchmark.rs  lib.rs  metrics.rs  model_config.rs  shader_bench.rs  standard_kv.rs
crates/kv-cache-benchmark/tests/: test_accuracy.rs  test_accuracy_suite.rs  test_apollo_accuracy.rs  test_apollo_query.rs  test_apollo_store.rs  test_comparative.rs  test_graph_walk.rs  test_hybrid.rs  test_markov.rs  test_real_model.rs  test_shaders.rs  test_standard.rs  test_turboquant.rs  test_unlimited_context.rs  wasm_compat.rs
crates/larql-boundary/: Cargo.toml
crates/larql-boundary/src/: frame.rs  gate.rs  metadata.rs
crates/larql-boundary/tests/: integration.rs  wasm_compat.rs
crates/larql-build/: CHANGELOG.md  Cargo.toml
crates/larql-build/src/: compiler.rs  lib.rs
crates/larql-cli/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/larql-cli/examples/: convert_moe_to_per_layer.rs  patch_down_proj.rs
crates/larql-cli/src/: formatting.rs  lib.rs  main.rs  utils.rs
crates/larql-cli/tests/: test_run_experts.rs  wasm_compat.rs
crates/larql-compute/: CHANGELOG.md  Cargo.toml  PERFORMANCE.md  README.md  ROADMAP.md  build.rs
crates/larql-compute/benches/: linalg.rs  matmul.rs
crates/larql-compute/csrc/: q4_dot.c
crates/larql-compute/docs/: decode-pipeline.md  quantization-formats.md  shaders.md
crates/larql-compute/examples/: bench_decode_q4k.rs  bench_full_pipeline.rs  bench_kernel_variants.rs  bench_q4kf_decode.rs  best_multi_layer.rs  best_pipeline.rs  build_q4_transposed.rs  compare_decode.rs  compare_formats.rs  compare_generation.rs  compare_ollama.rs  compare_pipeline.rs  debug_decode_pipeline.rs  demo_architecture.rs  demo_basic.rs  demo_build_q4t.rs  demo_ridge_solve.rs  profile_bandwidth.rs  profile_components.rs  profile_full_suite.rs  profile_kernels.rs  profile_kv_cache.rs  profile_new_kernels.rs  profile_operations.rs  profile_per_layer.rs  profile_q4_attention.rs  profile_q4_basic.rs  profile_q8_qkv.rs  profile_raw_dispatch.rs  profile_transpose.rs  test_correctness.rs  test_shader_compile.rs  test_shaders.rs
crates/larql-compute/src/: backend.rs  lib.rs  options.rs  pipeline.rs
crates/larql-compute/tests/: test_backend_matmul_quant.rs  test_correctness.rs  test_kernel_fused_attention.rs  test_kernel_fused_ops_norms.rs  test_kernel_handle_contract.rs  test_kernel_kv_attention.rs  test_kernel_kv_cache_append.rs  test_kernel_lm_head_gemv.rs  test_kernel_moe_expert_dispatch.rs  test_kernel_new_fused_kernels.rs  test_kernel_per_layer_embed.rs  test_kernel_q4k_ffn_gate_up.rs  test_kernel_q4k_ffn_gate_up_8sg.rs  test_kernel_q4k_ffn_gate_up_f16acc.rs  test_kernel_q4k_geglu_down.rs  test_kernel_q4k_matmul.rs  test_kernel_q4k_matmul_perf.rs  test_kernel_q4k_matvec_8sg.rs  test_kernel_q6k_geglu_down.rs  test_kernel_q6k_matvec_8sg.rs  test_kernel_qk_norm.rs  test_kernel_rope.rs  test_kernel_rope_at_pos.rs  test_kernel_v_norm.rs  test_kernel_vindex_integration.rs  test_metal_shaders.rs  test_pipeline_and_moe.rs  test_q4_x86_correctness.rs  wasm_compat.rs
crates/larql-core/: CHANGELOG.md  Cargo.toml  README.md
crates/larql-core/examples/: algorithm_demo.rs  bench_graph.rs  edge_demo.rs  filter_demo.rs  graph_demo.rs  serialization_demo.rs
crates/larql-core/src/: lib.rs
crates/larql-core/tests/: test_algo.rs  test_bfs_mock.rs  test_chain.rs  test_checkpoint.rs  test_components_walk.rs  test_edge.rs  test_graph.rs  test_new_algos.rs  test_python_compat.rs  test_roundtrip.rs  test_schema.rs  test_templates.rs  wasm_compat.rs
crates/larql-kv/: Cargo.toml
crates/larql-kv/src/: accuracy.rs  lib.rs  profiler.rs
crates/larql-kv/tests/: wasm_compat.rs
crates/larql-lql/: CHANGELOG.md  Cargo.toml  README.md
crates/larql-lql/benches/: compile.rs  executor.rs  parser.rs
crates/larql-lql/examples/: compact_demo.rs  compile_demo.rs  lql_demo.rs  parser_demo.rs  refine_demo.rs  scale_sweep_demo.rs  trace_demo.rs
crates/larql-lql/src/: ast.rs  error.rs  lexer.rs  (+3 more)
crates/larql-platform/: CHANGELOG.md  Cargo.toml
crates/larql-python/: CHANGELOG.md  Cargo.toml  README.md  build.rs  pyproject.toml
crates/larql-router-protocol/: CHANGELOG.md  Cargo.toml  build.rs
crates/larql-wasm/: Cargo.toml
crates/model-compute/: CHANGELOG.md  Cargo.toml
knowledge/: LICENSE  README.md  pyproject.toml
knowledge/docs/: knowledge-pipeline-spec.md
knowledge/scripts/: assemble_triples.py  build_core_triples.py  build_feature_labels.py  compare_probes.py  coverage_report.py  extract_all_ast_pairs.py  extract_ast_pairs.py  fetch_framenet.py  fetch_morphological.py  fetch_wikidata_properties.py  fetch_wikidata_triples.py  fetch_wordnet_relations.py  filter_entities.py  generate_grammar.py  ingest_dbpedia.py  ingest_wikidata_dump.py  normalize_triples.py  probe_entities.py  probe_mlx.py  probe_with_inference.py  quality_check.py
knowledge/tests/: test_ast_extract.py  test_grammar.py  test_labels.py  test_morphological.py  test_probe_matching.py  test_probe_output.py  test_syntax_data.py  test_templates.py  test_treesitter_extract.py  test_triples.py  test_triples_format.py  test_wikidata_combined.py
(+1138 files in other folders)
