[project]
name = "larql-knowledge"
version = "0.1.0"
description = "Knowledge pipeline for LARQL — reference databases and probe labels"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = []
dependencies = [
    "numpy",
]

[project.optional-dependencies]
wordnet = ["nltk", "inflect"]
probe = ["mlx", "mlx-lm"]  # Apple Silicon only
vindex = ["tokenizers"]
ast = ["tree-sitter"]
all = ["nltk", "inflect", "mlx", "mlx-lm", "tree-sitter", "tokenizers"]

[project.scripts]
larql-knowledge = "larql_knowledge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/larql_knowledge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
