[package]
name = "kv-cache-benchmark"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "KV cache benchmark: Standard KV vs TurboQuant vs Markov RS vs Graph Walk"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "kv_strategies"
harness = false
