[package]
name = "larql-boundary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Confidence-gated BOUNDARY ref codec for LARQL"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
wasm-bindgen-test = "0.3"

[[bench]]
name = "codec"
harness = false

[[example]]
name = "encode_decode"

[[example]]
name = "gate_decision"

[[example]]
name = "accuracy"
