[package]
name = "larql-boundary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Confidence-gated BOUNDARY ref codec for LARQL"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
browser-tests = []

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "codec"
harness = false

[[example]]
name = "encode_decode"

[[example]]
name = "gate_decision"

[[example]]
name = "accuracy"
