[package]
name = "larql-build"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["LARQL Contributors"]
description = "Shared build utilities for LARQL crates"
license = "MIT OR Apache-2.0"
keywords = ["build", "compiler", "platform"]
categories = ["development-tools::build-utils"]

[dependencies]
cc = "1.0"

[dev-dependencies]
# Testing utilities (used by consuming crates)

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
