[package]
name = "larql-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for LARQL knowledge graph extraction and querying"

[[bin]]
name = "larql"
path = "src/main.rs"

[dependencies]
larql-core = { path = "../larql-core", version = "0.1.0" }
larql-compute = { path = "../larql-compute", version = "0.1.0" }
larql-inference = { path = "../larql-inference", version = "0.1.0" }
larql-models = { path = "../larql-models", version = "0.1.0" }
larql-lql = { path = "../larql-lql", version = "0.1.0" }
larql-vindex = { path = "../larql-vindex", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
reqwest = { version = "0.12", features = ["blocking", "json"] }
base64 = "0.22"
tokenizers = "0.21"
safetensors = "0.5"
memmap2 = "0.9"
ndarray = "0.16"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
minijinja = "2"
libc = "0.2"

[features]
default = ["metal"]
metal = [
    "larql-compute/metal",
    "larql-inference/metal",
    "larql-vindex/metal",
]

[dev-dependencies]
tempfile = "3"
