[package]
name = "larql-compute"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Compute backends for LARQL — CPU (BLAS), Metal (GPU), CUDA (planned). Owns matmul dispatch, Q4 kernels, buffer management."
keywords = ["matmul", "metal", "gpu", "quantization", "blas"]
categories = ["science"]

[dependencies]
# Matrix types
ndarray = { version = "0.16", features = ["blas"] }
blas-src = { version = "0.10", features = ["accelerate"] }

# Metal GPU (macOS only, optional)
[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.29", optional = true }

[features]
default = []
metal = ["dep:metal"]
# cuda = []  # Future: CUDA backend

[build-dependencies]
cc = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = "0.5"
serde_json = "1"
memmap2 = "0.9"

[[bench]]
name = "matmul"
harness = false
