[package]
name = "larql-lql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LQL parser, executor, and REPL for LARQL"

[dependencies]
larql-compute = { path = "../larql-compute", version = "0.1.0" }
larql-core = { path = "../larql-core", version = "0.1.0" }
larql-inference = { path = "../larql-inference", version = "0.1.0" }
larql-models = { path = "../larql-models", version = "0.1.0" }
larql-vindex = { path = "../larql-vindex", version = "0.1.0" }
ndarray = "0.16"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rustyline = "15"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "executor"
harness = false

[[bench]]
name = "compile"
harness = false
