[package]
name = "larql-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Python bindings for LARQL knowledge graph engine and vindex"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
larql-core = { path = "../larql-core" }
larql-inference = { path = "../larql-inference" }
larql-models = { path = "../larql-models" }
larql-vindex = { path = "../larql-vindex" }
larql-lql = { path = "../larql-lql" }
pyo3 = { version = "0.24", features = ["extension-module"] }
numpy = "0.24"
ndarray = "0.16"
memmap2 = "0.9"
serde = { workspace = true }
serde_json = { workspace = true }
