[package]
name = "larql-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Python bindings for LARQL knowledge graph engine and vindex"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
larql-core = { path = "../larql-core", version = "0.1.0" }
larql-inference = { path = "../larql-inference", version = "0.1.0" }
larql-models = { path = "../larql-models", version = "0.1.0" }
larql-vindex = { path = "../larql-vindex", version = "0.1.0" }
larql-lql = { path = "../larql-lql", version = "0.1.0" }
pyo3 = { version = "0.24", features = ["extension-module"] }
numpy = "0.24"
ndarray = "0.16"
memmap2 = "0.9"
serde = { workspace = true }
serde_json = { workspace = true }
